# whisper-transcriber-pro

./: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  RASD.md  README.md  install.py  main.py  mypy.ini  project-structure.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_requirements.py  tox.ini
.github/workflows/: ci.yml
releases/: SHA256SUMS-v1.1.0.txt  SHA256SUMS-v1.2.0.txt
src/: environment_manager.py  model_manager.py  settings_manager.py  transcription_engine.py  transcription_engine_backup_librosa_slow.py  utils.py
tests/: conftest.py  test_all_in_one.py
tests/integration/: test_workflow.py
tests/performance/: test_performance.py
tests/unit/: test_environment_manager.py  test_model_manager.py  test_transcription_engine.py  test_utils.py
